--- a/index1.html
+++ b/index1.html
@@ -18,12 +18,12 @@
     <!--메인 페이지 -->
     <section id="main" class="mx-auto my-3 py-5 px-1">
       <h2> 우리는 서로에 대해 <br> 얼마나 알고 있을까? </h2>
-      <h1 class="title">[ 소소한 우정테스트 ] </h1>
+      <h1 class="title">[ 궁극의 우정테스트 ] </h1>
       <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto mt-3">
         <img src="./img/img.gif" alt="background" class="img-fluid">
       </div>
 
-      <p class="subtext mt-4">눈빛만 봐도 알지롱!꒰◍ˊ◡ˋ꒱੭ु⁾⁾<br>우리 우정의 레벨이 궁금하다면<br> 하단의 버튼을 눌러주세요!</p>
+      <p class="mt-4">눈빛만 봐도 알지롱!꒰◍ˊ◡ˋ꒱੭ु⁾⁾<br>우리 우정의 레벨이 궁금하다면<br> 하단의 버튼을 눌러주세요!</p>
       <button type="button" class="btn btn-outline-dark" onclick="js:begin()">당사자모드</button><br>
       <button type="button" class="btn btn-outline-primary mt-2">친구들모드</button>
     </section>
@@ -45,21 +45,23 @@
 
 
     <!--결과 페이지-->
-    <section id="result" class="mx-auto my-5 py-5 px-3">
-      <h2 class> 우리 우정의 레벨은? </h2>
-      <div class="resultName">
-      </div>
-      <div id="resultImg" class="my-4 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto mt-3">
-      </div>
-      <hr>
-      <div class="resultDesc">
-      </div>
-      <hr>
-      <p class="mt-4">오답노트로 친구를 더 공부하고 싶다면<br> 하단의 버튼을 눌러주세요!</p>
+    <section id="result">
+      <h2> 몇 점이나 맞았을까? </h2>
+      <div class="resultname">
 
-      점수랑 순위도 나오면 좋겠음.
-      <button type="button" class="study py-2 px-3 mt-2">오답노트</button><br>
-      <button type="button" class="kakao py-2 px-3 mt-2">공유하기</button>
+      </div>
+      <div id="resultImg" class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto mt-3">
+        <img src="" alt="background" class="img-fluid">
+      </div>
+      <div class="resultDesc">
+
+      </div>
+      <h1 class="title">[ 궁극의 우정테스트 ] </h1>
+
+
+      <p class="mt-4">눈빛만 봐도 알지로옹!꒰◍ˊ◡ˋ꒱੭ु⁾⁾<br> 우리 우정의 레벨이 궁금하다면<br> 하단의 버튼을 눌러주세요!</p>
+      <button type="button">공유하기</button><br>
+      <button type="button" class="btn btn-outline-primary mt-2">친구들모드</button>
 
     </section>
     <script src="./js/data.js" charset="utf-8"></script>
