--- a/Friendship/index.html
+++ b/Friendship/index.html
@@ -3,37 +3,81 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="iszeroworld">
+  <meta name="keywords" content="소소한 우정테스트">
+  <meta name="dscription" content="소소한 우정테스트">
+
+  <!--sns share -->
+  <meta property="og:url" content="https://leedy-s2.github.io/friendship_test/" />
+  <meta property="og:title" content="소소한 우정테스트" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="img/share.png" />
+  <meta property="og:description" content="소소한 " />
+
+  <!-- favicon-->
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <link rel="apple-touch-icon-precomposed" href="img/favicon.ico" />
   <title>우정테스트</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/default.css">
   <link rel="stylesheet" href="./css/qna.css">
   <link rel="stylesheet" href="./css/animation.css">
-
+  <link rel="stylesheet" href="./css/result.css">
 
 </head>
 
 <body>
   <div class="container">
     <!--메인 페이지 -->
-    <section id="main" class="mx-auto mt-5 py-5 px-1">
-      <h2> 우리는 서로에 대해 <br> 얼마나 알고 있을까? </h2><br>
-      <h1 class="title">[ 궁극의 우정테스트 ] </h1>
-      <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
-        <img src="./img/background4.png" alt="background" class="img-fluid">
+    <section id="main" class="mx-auto my-3 py-5 px-1">
+      <h2> 우리는 서로에 대해 <br> 얼마나 알고 있을까? </h2>
+      <h1 class="title">[ 소소한 우정테스트 ] </h1>
+      <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto mt-3">
+        <img src="./img/img.gif" alt="background" class="img-fluid">
       </div>
 
-      <p class="mt-4">눈만 마주쳐도 척하면 척!<br>우리의 우정레벨이 궁금하다면<br> 하단의 버튼을 눌러주세요!</p>
-        <button type="button" class="btn btn-outline-primary mt-2" onclick="js:begin()">사용자모드</button><br>
-        <button type="button" class="btn btn-outline-primary mt-2">친구들모드</button>
-      </section>
-      <!-- qna 페이지 -->
-      <section id="qna">
-        <p>test</p>
-      </section>
-      <!--결과 페이지-->
-      <section id="result"></section>
-      <script src="./js/start.js" charset="utf-8"></script>
-    </div>
-  </body>
-  </html>
+      <p class="subtext mt-4">눈빛만 봐도 알지롱!꒰◍ˊ◡ˋ꒱੭ु⁾⁾<br>우리 우정의 레벨이 궁금하다면<br> 하단의 버튼을 눌러주세요!</p>
+      <button type="button" class="btn btn-outline-dark" onclick="js:begin()">당사자모드</button><br>
+      <button type="button" class="btn btn-outline-primary mt-2">친구들모드</button>
+    </section>
+
+
+    <!-- qna 페이지 -->
+    <section id="qna">
+      <div class="status mx-auto mt-5 col-lg-6 col-md-8 col-sm-10 col-12">
+        <div class="statusBar">
+        </div>
+      </div>
+      <div class="qBox my-5 py-4 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
+
+      </div>
+      <div class="ansBox mt-5">
+
+      </div>
+    </section>
+
+
+    <!--결과 페이지-->
+    <section id="result" class="mx-auto my-5 py-5 px-3">
+      <h2 class> 우리 우정의 레벨은? </h2>
+      <div class="resultName">
+      </div>
+      <div id="resultImg" class="my-4 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto mt-3">
+      </div>
+      <hr>
+      <div class="resultDesc">
+      </div>
+      <hr>
+      <p class="mt-4">오답노트로 친구를 더 공부하고 싶다면<br> 하단의 버튼을 눌러주세요!</p>
+
+      점수랑 순위도 나오면 좋겠음.
+      <button type="button" class="study py-2 px-3 mt-2">오답노트</button><br>
+      <button type="button" class="kakao py-2 px-3 mt-2">공유하기</button>
+
+    </section>
+    <script src="./js/data.js" charset="utf-8"></script>
+    <script src="./js/start.js" charset="utf-8"></script>
+  </div>
+</body>
+</html>
