--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="iszeroworld">
+  <meta name="keywords" content="소소한 우정테스트">
+  <meta name="dscription" content="소소한 우정테스트">
+
+  <!--sns share -->
+  <meta property="og:url" content="https://leedy-s2.github.io/friendship_test/" />
+  <meta property="og:title" content="소소한 우정테스트" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="img/share.png" />
+  <meta property="og:description" content="소소한 " />
+
+  <!-- favicon-->
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <link rel="apple-touch-icon-precomposed" href="img/favicon.ico" />
   <title>우정테스트</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/main.css">
