--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
   <!--sns share -->
   <meta property="og:url" content="https://leedy-s2.github.io/friendship_test/" />
-  <meta property="og:title" content="소소한 우정테스트" />
+  <meta property="og:title" content="우정모의고사" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="img/share.png" />
-  <meta property="og:description" content="소소한 우정테스트" />
+  <meta property="og:description" content="우리 우정의 소소한 중간평가" />
 
   <!-- favicon-->
   <link rel="shortcut icon" href="img/favicon.ico">
