--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="https://leedy-s2.github.io/friendship_test/" />
   <meta property="og:title" content="우정모의고사" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="img/share.png" />
+  <meta property="og:image" content="img/img.gif" />
   <meta property="og:description" content="우리 우정의 소소한 중간평가" />
 
   <!-- favicon-->
