--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
       <p class="subtext mt-4">눈빛만 봐도 알지롱!꒰◍ˊ◡ˋ꒱੭ु⁾⁾<br>우리 우정의 레벨이 궁금하다면<br> 하단의 버튼을 눌러주세요!</p>
 
-      <input type="text" class="btn_name" placeholder="출제자 이름">
+      <input type="text" class="txt_name" placeholder="출제자 이름">
       <button type="button" class="btn btn-outline-dark" onclick="js:begin(1)">출제</button>
       <br>
-      <input type="text" class="btn_friend" placeholder="제출자 이름">
+      <input type="text" class="txt_friend" placeholder="제출자 이름">
       <button type="button" class="btn btn-outline-primary mt-2" onclick="js:begin(2)">풀기</button>
     </section>
 
