--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <img src="./img/main.gif" alt="background" class="img-fluid">
       </div>
 
-      <p class="subtext mt-4">눈빛만 봐도 알지롱!꒰◍ˊ◡ˋ꒱੭ु⁾⁾<br>우리 우정의 레벨이 궁금하다면<br> 하단의 버튼을 눌러주세요!</p>
+      <p class="subtext mt-4">눈빛만 봐도 알지!꒰◍ˊ◡ˋ꒱੭ु<br>우정의 레벨이 궁금하다면<br> 하단의 버튼을 눌러주세요!</p>
 
       <input type="text" class="txt_name" placeholder="출제자 이름">
       <button type="button" class="btn btn-outline-dark" onclick="js:begin(1)">출제</button>
@@ -64,7 +64,7 @@
 
 
     <!--결과 페이지-->
-    <section id="result" class="mx-auto my-5 py-5 px-3">
+    <section id="result" class="mx-auto my-5 py-3 px-3">
       <div class="friendName"></div>
       <h2><div class="score"></div></h2>
       <div class="resultName">
