--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="iszeroworld">
+  <meta name="author" content="iszero">
   <meta name="keywords" content="우정 모의고사">
   <meta name="dscription" content="우리 우정의 소소한 중간평가">
 
