--- a/index.html
+++ b/index.html
@@ -54,12 +54,8 @@
         <div class="statusBar">
         </div>
       </div>
-      <div class="qBox my-5 py-4 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
-
-      </div>
-      <div class="ansBox mt-5">
-
-      </div>
+      <div class="qBox my-5 py-4 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto"></div>
+      <div class="ansBox mt-5"></div>
     </section>
 
 
@@ -67,13 +63,10 @@
     <section id="result" class="mx-auto my-5 py-3 px-3">
       <div class="friendName"></div>
       <h2><div class="score"></div></h2>
-      <div class="resultName">
-      </div>
-      <div id="resultImg" class="my-4 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto mt-3">
-      </div>
+      <div class="resultName"></div>
+      <div id="resultImg" class="my-4 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto mt-3"></div>
       <hr>
-      <div class="resultDesc">
-      </div>
+      <div class="resultDesc"></div>
       <hr>
       <p class="mt-4">더 많은 친구들과 공유하고 싶다면<br> 하단의 버튼을 눌러주세요!</p>
 
